--- a/env.example
+++ b/env.example
@@ -33,13 +33,16 @@ VITE_GITHUB_REPO=your-username/your-repo-name
 # EdgeOne Pages 部署说明
 # =====================================
 #
-# EdgeOne Pages 不需要额外的API密钥配置！
-# 
+# ✅ EdgeOne Pages 不需要额外的API密钥配置！
+# ✅ 环境变量通过 GitHub Secrets 自动传递给构建过程
+# ✅ Vite 在构建时自动处理 VITE_ 前缀的环境变量
+#
 # 部署方式：
 # 1. 在 EdgeOne 控制台连接 GitHub 仓库
 # 2. 配置构建命令：npm run build
 # 3. 设置输出目录：dist
-# 4. 代码推送后自动部署
+# 4. 在 GitHub Secrets 中配置上述3个变量
+# 5. 代码推送后自动构建和部署
 #
 # 详细步骤见：EDGEONE_PAGES_SETUP.md
 #
