--- a/env.example
+++ b/env.example
@@ -48,10 +48,28 @@ VITE_GITHUB_REPO=your-username/your-repo-name
 #
 # =====================================
 
+# =====================================
+# 新功能环境变量（2025年1月更新）
+# =====================================
+
+# 4. Resend API Key（邮件服务）
+# 用途：发送站点提交通知和审核结果邮件
+# 获取：https://resend.com/api-keys
+# EdgeOne Secret: RESEND_API_KEY
+# 示例：re_1234567890abcdefghijklmnopqrstuvwxyz
+RESEND_API_KEY=your_resend_api_key_here
+
+# 5. 管理员邮箱
+# 用途：接收新站点提交通知
+# EdgeOne Secret: ADMIN_EMAIL
+# 示例：admin@yourdomain.com
+ADMIN_EMAIL=your_admin_email@example.com
+
+# =====================================
 # 本地开发使用：
 # npm run dev → http://localhost:5173
 # 管理后台：http://localhost:5173/admin
 #
 # 生产环境部署：
-# 配置 GitHub Secrets（仅需上述3个变量）
+# 配置 EdgeOne Functions 环境变量（需要上述5个变量）
 # EdgeOne Pages 自动构建和部署 
