--- a/env.example
+++ b/env.example
@@ -12,7 +12,7 @@
 # 用途：保护 /admin 管理页面访问
 # GitHub Secret: ADMIN_PASSWORD
 # 示例：MySecurePassword123!
-VITE_ADMIN_PASSWORD=your_secure_password_here
+#VITE_ADMIN_PASSWORD=your_secure_password_here
 
 # 2. GitHub Personal Access Token  
 # 用途：管理后台保存配置时调用GitHub API
@@ -20,14 +20,14 @@ VITE_ADMIN_PASSWORD=your_secure_password_here
 # 权限：需要 repo 权限
 # GitHub Secret: PERSONAL_ACCESS_TOKEN
 # 示例：ghp_1234567890abcdefghijklmnopqrstuvwxyz
-VITE_GITHUB_TOKEN=ghp_your_github_token_here
+#VITE_GITHUB_TOKEN=ghp_your_github_token_here
 
 # 3. GitHub仓库信息
 # 用途：指定要更新的仓库
 # 格式：GitHub用户名/仓库名
 # GitHub Secret: REPOSITORY_NAME
 # 示例：username/binnav
-VITE_GITHUB_REPO=your-username/your-repo-name
+#VITE_GITHUB_REPO=your-username/your-repo-name
 
 # =====================================
 # EdgeOne Functions 部署说明
@@ -57,13 +57,13 @@ VITE_GITHUB_REPO=your-username/your-repo-name
 # 获取：https://resend.com/api-keys
 # EdgeOne Secret: RESEND_API_KEY
 # 示例：re_1234567890abcdefghijklmnopqrstuvwxyz
-RESEND_API_KEY=your_resend_api_key_here
+#RESEND_API_KEY=your_resend_api_key_here
 
 # 5. 管理员邮箱
 # 用途：接收新站点提交通知
 # EdgeOne Secret: ADMIN_EMAIL
 # 示例：admin@yourdomain.com
-ADMIN_EMAIL=your_admin_email@example.com
+#ADMIN_EMAIL=your_admin_email@example.com
 
 # =====================================
 # 本地开发使用：
