--- a/env.example
+++ b/env.example
@@ -65,11 +65,17 @@
 # 示例：admin@yourdomain.com
 #ADMIN_EMAIL=your_admin_email@example.com
 
+# 6. Resend发送域名
+# 用途：设置邮件发送的from域名
+# EdgeOne Secret: RESEND_FROM_DOMAIN
+# 示例：noreply@yourdomain.com
+#RESEND_FROM_DOMAIN=noreply@yourdomain.com
+
 # =====================================
 # 本地开发使用：
 # npm run dev → http://localhost:5173
 # 管理后台：http://localhost:5173/admin
 #
 # 生产环境部署：
-# 配置 EdgeOne Functions 环境变量（需要上述5个变量）
-# EdgeOne Pages 自动构建和部署 
+# 配置 EdgeOne Functions 环境变量（需要上述6个变量）
+# EdgeOne Pages 自动构建和部署
