--- a/env.example
+++ b/env.example
@@ -66,10 +66,10 @@
 #ADMIN_EMAIL=your_admin_email@example.com
 
 # 6. Resend发送域名
-# 用途：设置邮件发送的from域名
+# 用途：设置邮件发送的from域名（仅域名部分，不包含@符号）
 # EdgeOne Secret: RESEND_FROM_DOMAIN
-# 示例：noreply@yourdomain.com
-#RESEND_FROM_DOMAIN=noreply@yourdomain.com
+# 示例：yourdomain.com（将自动组合为 noreply@yourdomain.com）
+#RESEND_FROM_DOMAIN=yourdomain.com
 
 # =====================================
 # 本地开发使用：
