--- a/env.example
+++ b/env.example
@@ -67,9 +67,9 @@
 
 # 6. Resend发送域名
 # 用途：设置邮件发送的from域名（仅域名部分，不包含@符号）
-# EdgeOne Secret: RESEND_FROM_DOMAIN
+# EdgeOne Secret: RESEND_DOMAIN
 # 示例：yourdomain.com（将自动组合为 noreply@yourdomain.com）
-#RESEND_FROM_DOMAIN=yourdomain.com
+#RESEND_DOMAIN=yourdomain.com
 
 # =====================================
 # 本地开发使用：
