--- a/env.example
+++ b/env.example
@@ -3,9 +3,9 @@
 # =====================================
 #
 # 说明：
-# 1. 复制为 .env 文件并修改下面的值
-# 2. 本地开发使用 .env 文件
-# 3. 生产环境使用 GitHub Secrets
+# 1. 复制为 .env.local 文件并修改下面的值
+# 2. 本地开发使用 .env.local 文件（优先级高于 .env）
+# 3. 生产环境在部署平台配置环境变量
 #
 
 # 1. 管理后台登录密码
