--- a/env.example
+++ b/env.example
@@ -44,7 +44,7 @@
 # 4. 在 EdgeOne 项目设置中配置上述3个环境变量
 # 5. EdgeOne 自动部署 Pages + Functions
 #
-# 详细步骤见：EDGEONE_FUNCTIONS_SETUP.md
+# 详细步骤见：README.md 部署指南部分
 #
 # =====================================
 
