--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,17 @@
 {
+  "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "framework": "vite",
   "functions": {
     "functions/api/*.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs20.x"
     }
   },
-  "redirects": [
+  "rewrites": [
     {
       "source": "/admin",
-      "destination": "/admin",
-      "permanent": false
+      "destination": "/admin"
     }
   ],
   "headers": [
