--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,12 +2,7 @@ name = "binnav"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
-[env.production]
-name = "binnav"
-
-[env.preview]
-name = "binnav-preview"
-
+# This is a Pages project, not a Worker
 # Pages configuration
 pages_build_output_dir = "dist"
 
