--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,16 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "vite",
   "functions": {
     "functions/api/*.js": {
-      "runtime": "@vercel/node@3.0.7"
+      "runtime": "edge",
+      "maxDuration": 10,
+      "memory": 128
     }
   },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/functions/api/$1"
-    }
-  ],
+  "buildCommand": "vite build",
+  "outputDirectory": "dist",
+  "cleanUrls": true,
   "headers": [
     {
       "source": "/(.*)",
