--- a/vercel-simple.json
+++ b/vercel-simple.json
@@ -1,5 +1,7 @@
 {
-  "buildCommand": "npm run build",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "framework": "vite",
+  "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "installCommand": "npm install"
+  "cleanUrls": true
 }
