--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,8 @@
   "outputDirectory": "dist",
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/admin", "destination": "/index.html" },
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/api/:match*", "destination": "/api/:match*" },
+    { "source": "/:path*", "destination": "/index.html" }
   ],
   "headers": [
     {
